@@ -1,5 +1,5 @@
 Package: asremlPlus
-Version: 4.0-24
+Version: 4.0-25
 Date: 2018-03-15
 Title: Augments the Use of 'ASReml-R' and 'ASReml4-R' in Fitting Mixed Models
 Author: Chris Brien <Chris.Brien@unisa.edu.au>.
