@@ -1,8 +1,9 @@
 ---
-title:  asremlPlus
-output: 
-  html_document:   
-    keep_md: TRUE
+title: "asremlPlus"
+output:
+  html_document:
+    keep_md: yes
+  pdf_document: default
 ---
  
 ---
@@ -11,11 +12,10 @@ output:
 ---
  
  
-
 [![Project Status: Active:  The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active)
 [![minimal R version](https://img.shields.io/badge/R%3E%3D-2.10.0-6666ff.svg)](https://cran.r-project.org/)
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/asremlPlus)](https://cran.r-project.org/package=asremlPlus)
-[![packageversion](https://img.shields.io/badge/Package%20version-4.0.24-orange.svg?style=flat-square)]()
+[![packageversion](https://img.shields.io/badge/Package%20version-4.0.25-orange.svg?style=flat-square)]()
 `[![Last-changedate](https://img.shields.io/badge/last%20change-`r gsub('-', '--', Sys.Date())`-yellowgreen.svg)](/commits/master)
 [![Licence](https://img.shields.io/github/license/mashape/apistatus.svg)](http://choosealicense.com/licenses/mit/)
 [![Downloads](https://cranlogs.r-pkg.org/badges/last-week/asremlPlus)](commits/master)
